--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
                         <li><%= link_to "手机版", "/mobile" %></li>
                     </ul>
                     <ul class="user-info">
-                        <li class="account"><%= link_to "个人中心", "/orders", {:class=>"my-account"} %><i class="tri"></i>
+                        <li class="account"><%= link_to "我的信息", "/orders", {:class=>"my-account"} %><i class="tri"></i>
                             <div id="yui_3_5_1_1_1350142560308_21" class="account-menu" style="display:none">
                                 <ul class="comment-info">
                                     <li><%= link_to "未使用", "/orders/list/unused", {:class=>"first"} %></li>
