add cnzz statistics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -121,6 +121,9 @@
             <div id="yui_3_5_1_1_1350142560308_56" class="copyright">
                 <p>©<span title="I:3; Q:7; S:4; C:36; F:0; T:173.32; H:e18">2012</span> startup.com <%= link_to "京ICP证100001号", "http://www.miibeian.gov.cn/", {:target=>"_blank"} %> 京公网安备100000000001号</p>
             </div>
+            <div style="display:none">
+                <script src="http://s23.cnzz.com/stat.php?id=4669675&web_id=4669675&show=pic" language="JavaScript"></script>
+            </div>
                 
             <ul class="cert cf">
             </ul>
