add destroy finish

--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -78,7 +78,8 @@
                                      | 
                                     <%= link_to "删除", { :controller => "admin/products",
                                                       :action => "destroy",
-                                                      :id => product.id } %>
+                                                      :id => product.id }, 
+                                                confirm: "删除后不可回复，确定删除？" %>
                                 </td>
                             </tr>
                         <% end %>
