--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -43,47 +43,45 @@
                 </ul>
 
                 <table id="order-list" class="coupons-table" cellpadding="0" cellspacing="0" border="0">
-                    <tbody>
+                    <tr>
+                        <th width="auto">编号</th>
+                        <th width="60">封面名称</th>
+                        <th width="60">商家名称</th>
+                        <th width="60">类别</th>
+                        <th width="60">区域</th>
+                        <th width="60">销售价格</th>
+                        <th width="60">市场价格</th>
+                        <th width="60">销售数量</th>
+                        <th width="60">结束时间</th>
+                        <th width="112">操作</th>
+                    </tr>
+                    <% @products.each do |product| %>
+                    <% if product.id % 2 == 1 %>
+                        <tr class="alt">
+                    <% else %>
                         <tr>
-                            <th width="auto">编号</th>
-                            <th width="60">商品名称</th>
-                            <th width="60">商家名称</th>
-                            <th width="60">类别</th>
-                            <th width="60">区域</th>
-                            <th width="60">销售价格</th>
-                            <th width="60">市场价格</th>
-                            <th width="60">销售数量</th>
-                            <th width="60">结束时间</th>
-                            <th width="112">操作</th>
+                    <% end %>
+                            <td><%= product.id %></td>
+                            <td><%= product.cover_name %></td>
+                            <td><%= product.shop_name %></td>
+                            <td><%= product.category %></td>
+                            <td><%= product.district %></td>
+                            <td><%= product.sale_price %></td>
+                            <td><%= product.original_price %></td>
+                            <td><%= product.sale_count %></td>
+                            <td><%= product.overtime_at %></td>
+                            <td>
+                                <%= link_to "编辑", { :controller => "admin/products",
+                                                  :action => "edit",
+                                                  :id => product.id } %>
+                                 | 
+                                <%= link_to "删除", { :controller => "admin/products",
+                                                  :action => "destroy",
+                                                  :id => product.id }, 
+                                            confirm: "删除后不可回复，确定删除？" %>
+                            </td>
                         </tr>
-                        <% @products.each do |product| %>
-                        <% if product.id % 2 == 1 %>
-                            <tr class="alt">
-                        <% else %>
-                            <tr>
-                        <% end %>
-                                <td><%= product.id %></td>
-                                <td><%= product.cover_name %></td>
-                                <td><%= product.shop_name %></td>
-                                <td><%= product.category %></td>
-                                <td><%= product.district %></td>
-                                <td><%= product.sale_price %></td>
-                                <td><%= product.original_price %></td>
-                                <td><%= product.sale_count %></td>
-                                <td><%= product.overtime_at %></td>
-                                <td>
-                                    <%= link_to "编辑", { :controller => "admin/products",
-                                                      :action => "edit",
-                                                      :id => product.id } %>
-                                     | 
-                                    <%= link_to "删除", { :controller => "admin/products",
-                                                      :action => "destroy",
-                                                      :id => product.id }, 
-                                                confirm: "删除后不可回复，确定删除？" %>
-                                </td>
-                            </tr>
-                        <% end %>
-                    </tbody>
+                    <% end %>
                 </table>
 
             </div>
