add markdown finish

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -60,6 +60,7 @@
                                 <li><b>绿色</b><br><p>狼与羊的爱情能持续多久，在于狼能够陪羊吃草吃到什么时候。在色彩心理学中，绿色是给人安全的颜色。何必因为自己对肉食的不舍，放弃与素食主义者共食一锅的亲密呢？遇上绿色偏好者，宜点青菜，忌点生猛海鲜。</p></li>
                                 <li><b>黄色</b><br><p>为何生日帽是黄色的，很大一部分原因是因为黄色能活跃气氛。遇见一个找你哭诉的妹子，就带她去吃火锅吧，点上几盘土豆、腐竹，再来一扎啤酒。让火锅的热气蒸去她的泪水，让明黄的食物带给她快乐。此时，宜多倾听多安慰，忌只吃饭不说话。 </p></li>
                             </ul>
+                            <%= markdown @product.content %>
                         </div>
                     </div>
                     <div class="side">
