--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -6,43 +6,45 @@
 <%= form_for @product, :url => form_action do |f| %>
     <table id="admin-products-table">
         <tr>
-            <td>商品名称：</td><td><%= f.text_field :product_name %></td>
+            <td>商品名称：</td><td><%= f.text_field :product_name, :size=>50 %></td>
         </tr>
         <tr>
-            <td>商家名称：</td><td><%= f.text_field :shop_name %></td>
+            <td>商家名称：</td><td><%= f.text_field :shop_name, :size=>50 %></td>
         </tr>
         <tr>
-            <td>类别：</td><td><%= f.text_field :category %></td>
+            <td>类别：</td><td><%= f.text_field :category, :size=>50 %></td>
         </tr>
         <tr>
-            <td>区域：</td><td><%= f.text_field :district %></td>
+            <td>区域：</td><td><%= f.text_field :district, :size=>50 %></td>
         </tr>
         <tr>
-            <td>区域名称：</td><td><%= f.text_field :district_name %></td>
+            <td>区域名称：</td><td><%= f.text_field :district_name, :size=>50 %></td>
         </tr>
         <tr>
-            <td>商品图片：</td><td><%= f.text_field :image_path %></td>
+            <td>商品图片：</td><td><%= f.text_field :image_path, :size=>50 %></td>
         </tr>
         <tr>
-            <td>封面图片：</td><td><%= f.text_field :cover_path %></td>
+            <td>封面图片：</td><td><%= f.text_field :cover_path, :size=>50 %></td>
         </tr>
         <tr>
-            <td>封面名称：</td><td><%= f.text_field :cover_name %></td>
+            <td>封面名称：</td><td><%= f.text_field :cover_name, :size=>50 %></td>
         </tr>
         <tr>
-            <td>销售价格：</td><td><%= f.text_field :sale_price %></td>
+            <td>销售价格：</td><td><%= f.text_field :sale_price, :size=>50 %></td>
         </tr>
         <tr>
-            <td>市场价格：</td><td><%= f.text_field :original_price %></td>
+            <td>市场价格：</td><td><%= f.text_field :original_price, :size=>50 %></td>
         </tr>
         <tr>
-            <td>销售数量：</td><td><%= f.text_field :sale_count %></td>
+            <td>销售数量：</td><td><%= f.text_field :sale_count, :size=>50 %></td>
         </tr>
         <tr>
-            <td>结束时间：</td><td><%= f.text_field :overtime_at %></td>
+            <td>结束时间：</td><td><%= f.text_field :overtime_at, :size=>50 %></td>
         </tr>
+    </table>
+    <table id="admin-products-table">
         <tr>
-            <td>详细内容：</td><td><%= f.text_field :content %></td>
+            <td>详细内容：</td><td><%= f.text_area :content, :cols=>80, :rows=>20 %></td>
         </tr>
     </table>
     <%= f.submit "提交" %>
