add rich editor by CKEditor

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -49,17 +49,7 @@
                     <div class="main">
                         <h2>本单详情</h2>
                         <div class="blk detail">
-                            <style>
-                            .standard-bar { padding:3px 6px; color:#fff; border-radius:3px; font-weight:bold; }
-                            </style>
-                            <p class="standard-bar" style="background-color:#37adb1;">就知道你俩至少有一个被火锅俘虏了</p><p>仅需88元即可享受最高价值252.4元的金源福城肥牛2-3人套餐，每人消费约29元哟！</p>
-                            <p class="standard-bar" style="background-color:#37adb1;">火锅公开课</p>
-                            <p>据江湖高人统计：在情侣吵架的理由中，因为吃火锅时选萝卜还是白菜而闹翻的比例高到令人咋舌。火锅也有色彩心理学，了解他/她的色彩，让爱情的小火锅沸腾。</p>
-                            <ul class="list">
-                                <li><b>红色</b><br><p>通过色彩实验，人们发现处于红色环境中，脉搏跳动速度增快，情绪容易兴奋。若是暗恋许久的女神想要红油辣锅，请放弃之前给自己设定的小清新路线，跟上女神热情的节奏，迅速变身为热血少年。此时，宜点肉类，忌点清汤。</p></li>
-                                <li><b>绿色</b><br><p>狼与羊的爱情能持续多久，在于狼能够陪羊吃草吃到什么时候。在色彩心理学中，绿色是给人安全的颜色。何必因为自己对肉食的不舍，放弃与素食主义者共食一锅的亲密呢？遇上绿色偏好者，宜点青菜，忌点生猛海鲜。</p></li>
-                                <li><b>黄色</b><br><p>为何生日帽是黄色的，很大一部分原因是因为黄色能活跃气氛。遇见一个找你哭诉的妹子，就带她去吃火锅吧，点上几盘土豆、腐竹，再来一扎啤酒。让火锅的热气蒸去她的泪水，让明黄的食物带给她快乐。此时，宜多倾听多安慰，忌只吃饭不说话。 </p></li>
-                            </ul>
+                            <%= @product.content %>
                             <%= markdown @product.content %>
                         </div>
                     </div>
