--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -44,7 +44,11 @@
     </table>
     <table id="admin-products-table">
         <tr>
-            <td>详细内容：</td><td><%= f.text_area :content, :cols=>80, :rows=>20 %></td>
+            <td>详细内容：</td>
+            <td>
+                <%= javascript_include_tag "ckeditor/init" %>
+                <%= f.cktext_area :content %>
+            </td>
         </tr>
         <tr>
             <td></td>
@@ -55,3 +59,4 @@
         </tr>
     </table>
 <% end %>
+
