--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -2,15 +2,15 @@
   #bd.cf
     .bread-nav
       = link_to "北京团购", "/"
-      %span »
+      %span> »
       = link_to "海淀区", "/category/all/haidianqu"
-      %span »
-      = link_to ">远大路", "/category/all/yuandalu"
-      %span »
+      %span> »
+      = link_to "远大路", "/category/all/yuandalu"
+      %span> »
       = link_to "美食", "/category/meishi/yuandalu"
-      %span »
+      %span> »
       = link_to "火锅", "/category/huoguo/yuandalu"
-      %span »
+      %span> »
       金源福城肥牛2-3人套餐
     #content
       #deal-intro.cf
