--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -82,6 +82,7 @@
               %li= link_to "市场合作", "/about#contact"
               %li= link_to "商家联盟", "/", :target=>"_blank"
               %li= link_to "版权声明", "/about/copyright"
+              %li= link_to "管理后台", "/admin/"
           .ftbox
             %h3 公司信息
             %ul
