--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -51,7 +51,7 @@
             %p 拉长测试
         .side
           .deal-buy-cover-img
-            = image_tag @product.image_path
+            = image_tag @product.image_path_url(:normal)
       #deal-stuff
         .mainbox.cf
           .main
