--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -6,7 +6,7 @@
         - if product.id % 2 == 1
           .item
             .cover
-              = link_to image_tag( product.cover_path, :width => "312", :height => "189", :title => "点击查看详情", :alt => product.cover_name ), { :controller => "products", :action => "show", :id => product.id }, { :target => "_blank" }
+              = link_to image_tag( product.image_path_url(:thumb), :width => "312", :height => "189", :title => "点击查看详情", :alt => product.cover_name ), { :controller => "products", :action => "show", :id => product.id }, { :target => "_blank" }
             %h3= link_to "【#{product.district_name}】#{product.cover_name}", { :controller => "products", :action => "show", :id => product.id }, { :target => "_blank" }
             %p.detail
               = link_to "去看看",
@@ -29,7 +29,7 @@
           .item.odd
             -# 代码重复
             .cover
-              = link_to image_tag( product.cover_path, :width => "312", :height => "189", :title => "点击查看详情", :alt => product.cover_name ), { :controller => "products", :action => "show", :id => product.id }, { :target => "_blank" }
+              = link_to image_tag( product.image_path_url(:thumb), :width => "312", :height => "189", :title => "点击查看详情", :alt => product.cover_name ), { :controller => "products", :action => "show", :id => product.id }, { :target => "_blank" }
             %h3= link_to "【#{product.district_name}】#{product.cover_name}", { :controller => "products", :action => "show", :id => product.id }, { :target => "_blank" }
             %p.detail
               = link_to "去看看",
