finshi detail part

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -21,7 +21,7 @@
               %span.bypast
                 价值 
                 %span.num
-                  %span= "¥#{product.original_price}"
+                  %span= "¥#{integer_of_value product.original_price}"
             %p.total
               %strong.num= product.sale_count
               人已购买
